--- a/ajedrezV0.o/ajedrezV0.o.vcxproj
+++ b/ajedrezV0.o/ajedrezV0.o.vcxproj
@@ -129,7 +129,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="graficosGlut.cpp" />
+    <ClCompile Include="mundo.cpp" />
     <ClCompile Include="v0_0.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="mundo.h" />
+    <ClInclude Include="pieza.h" />
+    <ClInclude Include="tablero.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
