--- a/Ajedrez/Ajedrez.vcxproj
+++ b/Ajedrez/Ajedrez.vcxproj
@@ -21,12 +21,14 @@
   <ItemGroup>
     <ClCompile Include="src\AI_SIMPLE.cpp" />
     <ClCompile Include="src\Ajedrez.cpp" />
+    <ClCompile Include="src\alfil.cpp" />
     <ClCompile Include="src\Casilla.cpp" />
     <ClCompile Include="src\Glut.cpp" />
     <ClCompile Include="src\Mundo.cpp" />
     <ClCompile Include="src\Peon.cpp" />
     <ClCompile Include="src\Pieza.cpp" />
     <ClCompile Include="src\Reina.cpp" />
+    <ClCompile Include="src\Rey.cpp" />
     <ClCompile Include="src\Tablero.cpp" />
     <ClCompile Include="src\Torre.cpp" />
   </ItemGroup>
@@ -34,11 +36,13 @@
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\AI_SIMPLE.h" />
     <ClInclude Include="src\Ajedrez.h" />
+    <ClInclude Include="src\alfil.h" />
     <ClInclude Include="src\Casilla.h" />
     <ClInclude Include="src\Mundo.h" />
     <ClInclude Include="src\Peon.h" />
     <ClInclude Include="src\Pieza.h" />
     <ClInclude Include="src\Reina.h" />
+    <ClInclude Include="src\Rey.h" />
     <ClInclude Include="src\Tablero.h" />
     <ClInclude Include="src\Torre.h" />
   </ItemGroup>
